 - Fixed problem with connections staying open after being used with SqlDataSource.
   The problem was that we were not returning an enumerator for our reader with the
   closeReader option set to true when we were supposed to.  (Bug #34460)
 - Fixed problem where the bit data type would continue to return null values
   once it saw a null value in a previous row (bug #36313)      
      
Version 5.1.5 - 
  - Fixed problem with membership provider where FindUserByEmail would fail trying to add
    a second parameter with the same name as the first (bug #33347)
  - Fixed long standing problem with compression over a network.  It's now fast again. (bug #27865)    
  - Fixed nant compilation problem on mono (bug #33508)
  - Fixed problem where connection state reported through the state change handler was not
    showing Open (bug #34082)   
  - Incorporated some connection string cache optimizations sent to us by Maxim Mass (bug #34000)
  - Fixed problem with opening a connection that was previously closed by sudden server disconnection (bug #33909)   
  - Fixed code to yeild better exception when using different connection strings in a single transaction (bug #34204)   
  - Small bugfix and speed enhancement in Statement.TokenizeSql (bug #34220)
  - Added connection string option 'Treat Tiny As Boolean' so applications that expect TINYINT(1)
    to return an integer will not break (bug #34052)
   
Version 5.1.4 - 11/12/2007
  - Fixed issue where column name metadata was not using the charset given on the connection string
    (Bug #31185)
  - Fixed problem where closing the connection before the reader where the reader was
    opened with CloseConnection would cause a object disposed exception to be thrown
  - Fixed problem with installer where the installation would fail if the performance
    counter categories had already been removed for some reason      
  - Fixed problem with attempting to use a command with a connection that is not open.