@@ -12,6 +12,8 @@ Version 5.1.6
    closeReader option set to true when we were supposed to.  (Bug #34460)
  - Fixed problem where the bit data type would continue to return null values
    once it saw a null value in a previous row (bug #36313)      
+ - Fixed problem with MembershipUser.GetPassword where attempting to retrieve a
+   password on a user where password Q&A is not required would throw an exception (bug #36159)      
       
 Version 5.1.5 - 
   - Fixed problem with membership provider where FindUserByEmail would fail trying to add
